[project]
name = "fine-python-aksem"
version = "0.1.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.14"
dependencies = [
    "fine_python_module_exports @ git+https://github.com/finecode-dev/finecode.git#subdirectory=extensions/fine_python_module_exports",
]

[tool.poetry.group.dev.dependencies]
finecode = { git = "https://github.com/finecode-dev/finecode.git" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
