[project]
name = "fine-python-aksem"
version = "0.2.0"
description = ""
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11, < 3.14"
dependencies = [
    "fine_python_module_exports==0.2.*",
    "finecode_extension_api==0.3.*",
]

[tool.setuptools.package-data]
fine_python_aksem = ["preset.toml"]
